--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Default Light Mode */
 body {
   font-family: Arial, sans-serif;
   text-align: center;
@@ -56,48 +55,20 @@ img {
   display: block;
   margin: 10px auto;
 }
-
 #info {
   width: 50%;
   margin: auto;
+
 }
 
-/* Dark Mode Styles */
-.dark-mode {
-  background-color: #333;
-  color: #f7f7f7;
-}
 
-.dark-mode h1 {
-  color: #90EE90;
-}
+@media (max-width: 600px) {
+  .meal-deal {
+      flex-direction: column;
 
-.dark-mode button {
-  background-color: #FFD700;
-  color: #333;
-}
+  }
+  #info {
+    flex-direction: column;
 
-.dark-mode button:hover {
-  background-color: #FFC107;
 }
-
-.dark-mode #result {
-  background-color: #444;
-  color: #f7f7f7;
-}
-
-.dark-mode .meal-deal {
-  background-color: #555;
-}
-
-.dark-mode #info {
-  background-color: #444;
-  color: #f7f7f7;
-}
-
-.dark-mode img {
-  border: 2px solid #f7f7f7;
-}
-.dark-mode a {
-  color: white;
 }
