--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,24 @@ img {
   margin: auto;
 }
 
+/* Media Query for Mobile */
+@media (max-width: 768px) {
+  .meal-deal {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #Main, #Snack, #Drink {
+    flex: none;
+    width: 80%;
+    margin-bottom: 20px;
+  }
+
+  img {
+    max-width: 150px;
+  }
+}
+
 /* Dark Mode Styles */
 .dark-mode {
   background-color: #333;
@@ -99,6 +117,7 @@ img {
 .dark-mode img {
   border: 2px solid #f7f7f7;
 }
+
 .dark-mode a {
   color: white;
 }
